issue2/some-file.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources-limits
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: check-container-resources
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "CPU and memory resource limits must be set for all containers."
        pattern:
          spec:
            containers:
              - resources:
                  limits:
                    memory: "?*"
                    cpu: "?*"
---

# This is an empty doc
---

# Another empty object
--- {}
